...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="SEGradientView" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qq9-Q8-hzJ">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="SEBorderView" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9gJ-Yw-33r">
                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                <segments>
                                    <segment title="Blue"/>
                                    <segment title="Green"/>
                                    <segment title="Black"/>
                                </segments>
...
                                <segments>
                                    <segment title="Yellow"/>
                                    <segment title="Purple"/>
                                    <segment title="Red"/>
                                </segments>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AAm-ej-wSz">
                                <rect key="frame" x="16" y="269" width="343" height="30"/>
                                <state key="normal" title="Apply"/>
                                <connections>
                                    <action selector="applyAction:" destination="FCv-KU-TgX" eventType="touchUpInside" id="O7v-4s-oqR"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="20" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n6J-av-eVO">
                                        <rect key="frame" x="0.0" y="29" width="163.5" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="borderRadiousTextField"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="5" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A8X-3x-Tcm">
                                        <rect key="frame" x="0.0" y="29" width="163.5" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="borderWidthTextField"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
